<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Conversion</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_weight">Unit Weight</string>
    <string name="menu_distance">Unit Distance</string>
    <string name="menu_volume">Unit Volume</string>
    <string name="menu_time">Unit Time</string>
    <string name="menu_currency">Currency</string>
</resources>